uploading stylistic changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <title>Fitness Tracker</title>
+  <title>Aar's Fitness Tracker</title>
 </head>
 
 <body>
   <nav>
+    <span id ="span1">Internal Links:</span>
     <a href="/">Fitness Tracker</a>
     <a href="/stats">Dashboard</a>
+    <span id = "span2">External Links</span>
+    <a href="https://www.muscleandfitness.com/workout-routines/" target= "_blank">Workout Routines</a>
+    <a href="https://www.webmd.com/fitness-exercise/healthtool-exercise-calculator" target= "_blank">Calories Calculator</a>
+    <a href="https://www.womenshealthmag.com/" target= "_blank">Nutrition Calculator</a>
+    <a href="https://www.menshealth.com" target= "_blank">Women's Health</a>
+    <a href="https://webmd.com/diet/healthtool-food-calorie-counter" target= "_blank">Men's Health</a>
   </nav>
   <div class="wrapper workout">
     <header>
-      <h1>Fitness Tracker</h1>
+      <h1>Aar's Fitness Tracker</h1>
     </header>
     <div class="ui container workout">
       <div class="ui raised card m-auto">
