--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+  ...
+<link rel="shortcut icon" type="image/jpg" href="./favicon.ico"/>
+...
   <link rel="stylesheet" href="style.css" />
   <title>Aar's Fitness Tracker</title>
 </head>
