correcting links on index html

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
     <span id = "span2">External Links</span>
     <a href="https://www.muscleandfitness.com/workout-routines/" target= "_blank">Workout Routines</a>
     <a href="https://www.webmd.com/fitness-exercise/healthtool-exercise-calculator" target= "_blank">Calories Calculator</a>
-    <a href="https://www.womenshealthmag.com/" target= "_blank">Nutrition Calculator</a>
-    <a href="https://www.menshealth.com" target= "_blank">Women's Health</a>
-    <a href="https://webmd.com/diet/healthtool-food-calorie-counter" target= "_blank">Men's Health</a>
+    <a href="https://webmd.com/diet/healthtool-food-calorie-counter" target= "_blank">Nutrition Calculator</a>
+    <a href="https://www.womenshealthmag.com/" target= "_blank">Women's Health</a>
+    <a href="https://www.menshealth.com" target= "_blank">Men's Health</a>
   </nav>
   <div class="wrapper workout">
     <header>
